--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@ a.xz{ text-decoration:none;}
 <hr>
 <h4 class="jz">开发者：星斩工作室<br>版本号：v1.00<br>语言：易语言</h4>
 <p class="i jz ybj">星斩浏览器在易浏览器的基础上编写而成<br>拥有着一个浏览器的基本性能<br>更新日志<br>6.05完成基础功能<br>6.06优化<br>功能<br>访问网页<br>打开本地HTML文件<br>IE内核</p>
-<p class="jz"><a href="D:\星斩浏览器安装.exe" download="星斩浏览器安装包.exe" class="xz"><button>下载安装包</button></a>
+<p class="jz"><a href="D:\星斩浏览器安装.exe" download="星斩浏览器安装.exe" class="xz"><button>下载安装包</button></a>
 </p>
 </body>
 </html>
